KSENROLL-7288 :Fixed the Top bar miss aligned  with other part of the Manage CO page.
git-svn-id: https://svn.kuali.org/repos/student/enrollment/ks-enroll/trunk@49276 0ac02d80-fb3f-11dc-a574-c57244a850eb

--- a/ks-enroll-web/src/main/webapp/ks-enroll/css/enroll.css
+++ b/ks-enroll-web/src/main/webapp/ks-enroll/css/enroll.css
@@ -609,7 +609,8 @@ a {
     background-image:url('../images/context-bar/bg_context_bar.png');
     height: 38px;
     width: 100%;
-    border-left: 8px solid #808080;
+    border-left: 0 solid #808080;
+    border-left-width: 0;
 }
 
 .ks-topGroup label{
